--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
-    "custom.d.ts"
+    "custom.d.ts",
+    ".module.css"
   ],
   "exclude": [
     "node_modules"
